k8s/manifests/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
  labels:
    app: users-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: binarysimple/simple-users-service:0.0.3
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/config
              readOnly: true
          livenessProbe: #Liveness проба
            httpGet:
              path: /actuator/health/
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: config-volume
          configMap:
            name: users-service-config
            items:
              - key: application-kubernetes.yaml
                path: application-kubernetes.yaml
