k8s/manifests/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-service-ingress
spec:
  ingressClassName: nginx # класс nginx ingress
  rules:
    - host: arch.homework # хост arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 80
